Fixed bug 2829472 - Overlapping leave not shown according to 2.5 UI standards

--- a/php/orangehrm/themes/orange/css/leave.css
+++ b/php/orangehrm/themes/orange/css/leave.css
@@ -203,7 +203,7 @@ input:not([readonly]):not([type=image]):focus, select:focus, textarea:focus {
 	background-color: #FAD163;
 	padding: 3px 10px;
 	font-weight: bold;
-	width: 445px;
+	width: 620px;
 }
 
 .confirmBox .selectable {
